# gitee_client

./: .gitignore  README.md  gitee_api_v5_swagger.json  pyproject.toml
.github/workflows/: workflow.yml
gitee_client/: __init__.py  client.py  error.py  pagination.py  utils.py
gitee_client/api/: __init__.py  activity.py  base.py  checks.py  emails.py  enterprises.py  gists.py  git_data.py  issues.py  labels.py  milestones.py  miscellaneous.py  organizations.py  pulls.py  repos.py  search.py  users.py  webhooks.py
gitee_client/models/: __init__.py  activity.py  check.py  common.py  enterprise.py  git.py  issue.py  org.py  pull_request.py  repo.py
