[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitee-client"
version = "1.1.0"
description = "Gitee API v5 Python 客户端库 — 覆盖全部 264 个端点"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "TableRogue" }
]
keywords = ["gitee", "api", "client", "git", "china"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25",
]

[project.urls]
Homepage = "https://gitee.com/TableRogue/gitee_client"
Repository = "https://gitee.com/TableRogue/gitee_client"
Issues = "https://gitee.com/TableRogue/gitee_client/issues"

[tool.setuptools]
packages = { find = { where = ["."], include = ["gitee_client", "gitee_client.*"] } }

[tool.setuptools.package-data]
gitee_client = ["py.typed"]
